[gd_scene load_steps=4 format=3 uid="uid://sixv5qweae15"]

[ext_resource type="Script" path="res://scripts/ui/scoreboard.gd" id="1_31yh8"]
[ext_resource type="FontFile" uid="uid://bxibr3cgsdhaa" path="res://assets/fonts/Fredoka-Light.ttf" id="2_h1weo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nhvi"]
bg_color = Color(0.278431, 0.278431, 0.278431, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ResultBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31yh8")

[node name="UsernameInput" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -108.0
offset_right = 179.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4nhvi")

[node name="MarginContainer" type="MarginContainer" parent="UsernameInput"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="UsernameInput/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="UsernameInput/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h1weo")
theme_override_font_sizes/font_size = 14
text = "Highscore: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UsernameInput/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h1weo")
theme_override_font_sizes/font_size = 31
text = "Enter username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="UsernameInput/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"

[node name="HBoxContainer" type="HBoxContainer" parent="UsernameInput/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="UsernameInput/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[node name="SumbitButton" type="Button" parent="UsernameInput/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SUBMIT"

[node name="Scoreboard" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -266.0
offset_right = 179.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4nhvi")

[node name="MarginContainer" type="MarginContainer" parent="Scoreboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="Scoreboard/MarginContainer"]
layout_mode = 2

[node name="ScoreboardVBox" type="VBoxContainer" parent="Scoreboard/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Scoreboard/MarginContainer/ScrollContainer/ScoreboardVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h1weo")
theme_override_font_sizes/font_size = 31
text = "SCOREBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UsernameInput/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_username_cancel_button_pressed"]
[connection signal="pressed" from="UsernameInput/MarginContainer/VBoxContainer/HBoxContainer/SumbitButton" to="." method="_on_username_sumbit_button_pressed"]
